# living-slides-cli

./: .gitignore  CLAUDE.md  README.md  demo.html  pyproject.toml
.claude-plugin/: plugin.json
docs/: PRD.md  (+3 more)
living-slides-cli/: CLAUDE.md  README.md  pyproject.toml
living-slides-cli/docs/: test-plan.md  test-summary-v2.md  test-summary.md
living-slides-cli/docs/superpowers/specs/: 2026-04-04-htmlcli-design.md
living-slides-cli/docs/test-results/: test-01-qbr.md  test-03-tech-architecture.md  test-04-pitch-deck.md  test-05-sales-proposal.md  test-06-data-analysis.md  test-07-ai-keynote.md  test-10-board-meeting.md  test-11-marketing-quarterly.md  test-12-distributed-systems.md
living-slides-cli/docs/test-results-v1/: test-05-sales-proposal.md  test-07-data-analysis.md  test-08-tech-architecture.md  test-09-pitch-deck.md  test-11-meeting-agenda.md  test-12-competitive-analysis.md
living-slides-cli/skills/living-slides/: SKILL.md
living-slides-cli/skills/living-slides/references/: animation-patterns.md  common-mistakes.md  copywriting-formulas.md  layout-patterns.md
living-slides-cli/src/living_slides/: __init__.py  adopt.py  assets.py  cli.py  differ.py  history.py  server.py  templates.py  verify.py
living-slides-cli/src/living_slides/adopters/: __init__.py  pptx.py
living-slides-cli/src/living_slides/exporters/: __init__.py  pdf.py
living-slides-cli/src/living_slides/static/: editor.html  editor.js
living-slides-cli/test-output/: _gen_tam.py  gen_test09_charts.py  test01.html  test03.html  test05.html  test07.html  test08.html  test11.html  test12.html
living-slides-cli/tests/: test_adopt.py  test_assets.py  test_cli.py  test_differ.py  test_differ_granular.py  test_history.py  test_pdf_exporter.py  test_pptx_adopter.py  test_preserve_cascade_e2e.py  test_server.py  test_starter_template.py  test_templates.py  test_verify.py
(+48 files in other folders)
