[project]
name = "htmlcli"
version = "0.1.0"
description = "Visual HTML editor CLI for AI-assisted workflows"
readme = "README.md"
authors = [
    { name = "Terry-cyx", email = "446816968@buaa.edu.cn" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "aiohttp>=3.9",
]

[project.scripts]
htmlcli = "htmlcli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/htmlcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-aiohttp>=1.1.0",
]
