[project]
name = "living-slides"
version = "0.2.0"
description = "The iteration loop for AI-generated HTML slide decks. Your slides stay. The rest catches up."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Terry-cyx", email = "446816968@buaa.edu.cn" }
]
requires-python = ">=3.11"
keywords = ["slides", "html", "ai", "claude", "presentation", "deck", "iteration", "edit-loop"]
dependencies = [
    "click>=8.1",
    "aiohttp>=3.9",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
pptx = [
    "python-pptx>=0.6",
]

[project.urls]
Homepage = "https://github.com/Terry-cyx/living-slides-cli"
Repository = "https://github.com/Terry-cyx/living-slides-cli"
Issues = "https://github.com/Terry-cyx/living-slides-cli/issues"

[project.scripts]
slive = "living_slides.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/living_slides"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-aiohttp>=1.1.0",
]
